# api/docs/swagger.json
@@ -4,26 +4,101 @@
         "contact": {}
     },
     "paths": {
-        "/GetCenterInfo/": {
+        "/api/v1/center": {
             "get": {
-                "description": "aaaaaa",
+                "description": "Get center details by ID",
                 "consumes": [
-                    "application/x-json-stream"
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
                 ],
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "必須ではありません。",
-                        "name": "none",
-                        "in": "query"
+                        "description": "center_no",
+                        "name": "center_no",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "ok",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/models.Center"
                         }
+                    }
+                }
+            }
+        },
+        "/api/v1/nyuka/getcounts": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "获取未入荷条数",
+                "parameters": [
+                    {
+                        "description": "test",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.NyukaInputRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "$ref": "#/definitions/response.NyukaInputResponse"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Center": {
+            "type": "object",
+            "properties": {
+                "center_name": {
+                    "type": "string"
+                },
+                "center_no": {
+                    "type": "string"
+                }
+            }
+        },
+        "request.NyukaInputRequest": {
+            "type": "object",
+            "properties": {
+                "center_no": {
+                    "type": "string"
+                },
+                "nyuka_begin": {
+                    "type": "string"
+                },
+                "nyuka_end": {
+                    "type": "string"
+                },
+                "sire_no": {
+                    "type": "string"
+                }
+            }
+        },
+        "response.NyukaInputResponse": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "integer"
+                },
+                "orderNo_List": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 }
             }
