# api/handler/center_handler.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"fmt"
 	"go-studying/service"
+	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
@@ -15,29 +16,24 @@ func NewCenterHandlers(cs service.ICenterService) CenterHandler {
 	return CenterHandler{centerService: cs}
 }
 
-/*
-GetCenterInfo @Summary Get user by ID
-@Description Get user details by ID
-@Tags users
-@ID getUserById
-@Accept json
-@Produce json
-@Param	center_no	query	string	false	"必須ではありません。"
-@Success 200 {object} User
-@Router /api/v1/center [get]
-*/
+// @Description Get center details by ID
+// @Accept json
+// @Produce json
+// @Param	center_no	query	string	true	"center_no"
+// @Success 200 {object} models.Center
+// @Router /api/v1/center [get]
 func (ch *CenterHandler) GetCenterInfo(ctx *gin.Context) {
 	centerNo := ctx.Query("center_no")
 
-	// res, err := ch.centerService.GetByCenterNo(ctx, centerNo)
-	_, err := ch.centerService.GetByCenterNo(ctx, centerNo)
+	res, err := ch.centerService.GetByCenterNo(ctx, centerNo)
+	// _, err := ch.centerService.GetByCenterNo(ctx, centerNo)
 
 	if err != nil {
 		fmt.Printf("error %v", err)
 		return
 	}
 
-	// ctx.JSON(http.StatusOK, gin.H{"CenterInfo": res})
-	ctx.JSON(200, "ok")
+	ctx.JSON(http.StatusOK, gin.H{"CenterInfo": res})
+	// ctx.JSON(200, "ok")
 
 }
